tests/transpiler/x/go/membership.error
exit status 1
# command-line-arguments
../../../tests/transpiler/x/go/membership.go:12:80: syntax error: function type must have no type parameters
../../../tests/transpiler/x/go/membership.go:20:80: syntax error: function type must have no type parameters
