tests/transpiler/x/go/membership.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-20 09:08:22 GMT+7
package main

import (
    "fmt"
)

func main() {
    var nums []int = []int{1, 2, 3}
    fmt.Println(func(v any) any { if v == nil { return "nil" }; return v }(func[T comparable](list []T, v T) bool {
    for _, x := range list {
        if x == v {
            return true
        }
    }
    return false
}(nums, 2)))
    fmt.Println(func(v any) any { if v == nil { return "nil" }; return v }(func[T comparable](list []T, v T) bool {
    for _, x := range list {
        if x == v {
            return true
        }
    }
    return false
}(nums, 4)))
}
